# genD

./: .clang-format  .gitignore  .rustfmt.toml  CMakeLists.txt  Cargo.toml
examples/: sdl_window.rs
examples/first_triangle/: app.rs  main.rs
examples/hello_color/: app.rs  main.rs
glad/: CMakeLists.txt
glad/inc/glad/: glad.h
glad/src/: glad.c
inc/: SdlError.hpp
libtetra/: CMakeLists.txt  TetraTargets.cmake
libtetra/cmake/: TetraConfig.cmake.in
libtetra/include/tetra/: Color.hpp  ColoredLine.hpp  Countdown.hpp  Mat4x4.hpp  Ortho.hpp  Surface.hpp  Turtle.hpp
libtetra/include/tetra/gl/: Buffer.hpp  DebugLog.hpp  Framebuffer.hpp  Program.hpp  Shader.hpp  Texture.hpp  VAO.hpp
libtetra/include/tetra/primitives/: Triangles.hpp
libtetra/include/tetra/sdl/: SdlError.hpp  SdlEventPump.hpp
libtetra/include/tetra/transforms/: AutoAspectOrtho.hpp  FixedOrtho.hpp
libtetra/src/: Color.cpp  ColoredLine.cpp  Countdown.cpp  Ortho.cpp  Surface.cpp  Turtle.cpp
libtetra/src/gl/: Buffer.cpp  DebugLog.cpp  Framebuffer.cpp  Program.cpp  Shader.cpp  Texture.cpp  VAO.cpp
libtetra/src/primitives/: Triangles.cpp
libtetra/src/sdl/: SdlError.cpp  SdlEventPump.cpp  Window.cpp
libtetra/src/transforms/: AutoAspectOrtho.cpp  FixedOrtho.cpp
libtetra/tests/: CMakeLists.txt
libtetra/tests/src/: ColorTest.cpp
sketches/color/circle_spectrum/: CMakeLists.txt  readme.md
sketches/color/circle_spectrum/src/: GlApp.cpp  GlApp.hpp
sketches/color/hello_color/: CMakeLists.txt  readme.md
sketches/color/hello_color/src/: GlApp.cpp  GlApp.hpp
sketches/color/interpolation/: CMakeLists.txt  readme.md
sketches/color/interpolation/src/: GlApp.cpp  GlApp.hpp
sketches/color/spectrum/: CMakeLists.txt  readme.md
sketches/color/spectrum/src/: GlApp.cpp  GlApp.hpp  main.cpp
sketches/fade_lines/: CMakeLists.txt  readme.md
sketches/fade_lines/src/: GlApp.cpp  GlApp.hpp  PingPong.cpp  main.cpp
src/: CMakeLists.txt  SdlError.cpp  app_failure.rs  gl_app.rs  gl_debug.rs  lib.rs  macros.rs  main.cpp
src/core_gl/: buffer.rs  mod.rs  program.rs  shader.rs  vao.rs
src/primitives/: mod.rs
src/tetra/: ColoredLine.cpp  ColoredLine.hpp  Countdown.hpp  GlApp.cpp  GlApp.hpp  Surface.cpp  Surface.hpp  Turtle.cpp  Turtle.hpp
src/tetra/gl/: Buffer.cpp  Buffer.hpp  DebugLog.cpp  DebugLog.hpp  Framebuffer.cpp  Framebuffer.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp
src/tetra/sdl/: SdlError.cpp  SdlError.hpp  SdlEventPump.hpp  Window.cpp  Window.hpp
src/view/: mod.rs  viewport.rs
src/view/ortho/: fixed_ortho.rs  mod.rs
